some css changes to disable text selection

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ ol, ul {
 }
 
 .square {
-  background: #fff;
+  background: antiquewhite;
   border: 1px solid #999;
   float: left;
   font-size: 1.2vw;
@@ -120,6 +120,12 @@ ol, ul {
 .game {
   display: inline;
   flex-direction: row;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .game-info {
