--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,16 @@
 }
 
 body {
-  font: 15px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  /*set body in center*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   background-color: peachpuff;
 }
 
@@ -98,14 +106,18 @@ ol, ul {
 .square[name="8"] {
   background-color: red;
 }
-.square[name="P"] {
+.square[name="🚩"] {
   background-color: cornflowerblue;
 }
-.square[name="@"] {
+.square[name="💣"] {
   background-color: darkred;
 }
 
-.square[name="X"] {
+.square[name="💥"] {
+  background-color: darkred;
+}
+
+.square[name="❌"] {
   background-color: purple;
 }
 
@@ -128,17 +140,77 @@ ol, ul {
                                   supported by Chrome and Opera */
 }
 
-.game-info {
-  height: 100%;
-  width: 25%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  background-color: lightsalmon;
-  overflow-x: hidden;
-  padding-top: 20px;
-  padding-left: 15px;
-  font-family: "Comic Sans MS", serif;
-  color: saddlebrown;
+
+
+
+  /* CSS */
+.input[type=button], input[type=submit], input[type=reset]{
+  align-items: center;
+  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+  border: 0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-family: "Codec cold",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  height: 54px;
+  justify-content: center;
+  letter-spacing: .4px;
+  line-height: 1;
+  max-width: 100%;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-top: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
+
+.input[type=button], input[type=submit], input[type=reset]:active {
+  outline: 0;
+}
+
+.input[type=button], input[type=submit], input[type=reset]:hover {
+  outline: 0;
+}
+
+.input[type=button], input[type=submit], input[type=reset] span {
+  transition: all 200ms;
+}
+
+.input[type=button], input[type=submit], input[type=reset]:hover span {
+  transform: scale(.9);
+  opacity: .75;
+}
+
+@media screen and (max-width: 991px) {
+  .input[type=button], input[type=submit], input[type=reset] {
+    font-size: 15px;
+    height: 50px;
+  }
+
+  .input[type=button], input[type=submit], input[type=reset] span {
+    line-height: 50px;
+  }
+}
+
+/*.game-info {*/
+/*  height: 100%;*/
+/*  width: 25%;*/
+/*  position: fixed;*/
+/*  z-index: 1;*/
+/*  top: 0;*/
+/*  right: 0;*/
+/*  background-color: lightsalmon;*/
+/*  overflow-x: hidden;*/
+/*  padding-top: 20px;*/
+/*  padding-left: 15px;*/
+/*  font-family: "Comic Sans MS", serif;*/
+/*  color: saddlebrown;*/
+/*}*/
